compiler/testData/diagnostics/tests/secondaryConstructors/resolvePropertyInitializerWithoutPrimary.fir.kt
// RUN_PIPELINE_TILL: SOURCE
class A {
    val prop: Int = <!INITIALIZER_TYPE_MISMATCH!>""<!>
    constructor()
}
